[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game_Parts/Enemy/ZapBoy.gd" type="Script" id=1]
[ext_resource path="res://Game_Parts/Enemy/Path2D.gd" type="Script" id=2]
[ext_resource path="res://Resources/ringed_sphere.png" type="Texture" id=3]
[ext_resource path="res://Resources/Particles/effect16.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.65444
height = 5.35943

[sub_resource type="Animation" id=2]
resource_name = "boom"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Path2D/PathFollow2D/CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Path2D/PathFollow2D/CPUParticles2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jumpComplete"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array(  )
}

[node name="ZapBoy" type="Area2D"]
collision_layer = 8
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boom = SubResource( 2 )
anims/jump = SubResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 4 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -0.300888, -0.0711212 )
rotate = false
loop = false

[node name="ringed_sphere" type="Sprite" parent="Path2D/PathFollow2D"]
self_modulate = Color( 0.709804, 0, 0, 1 )
position = Vector2( 0, -4 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Path2D/PathFollow2D"]
self_modulate = Color( 1, 0, 0, 1 )
emitting = false
amount = 40
lifetime = 2.0
explosiveness = 0.86
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
scale_amount = 0.4

[node name="TimerMove" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_ZapBoy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ZapBoy_body_entered"]
[connection signal="timeout" from="TimerMove" to="." method="_on_TimerMove_timeout"]
